--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <input type="file" name="fname" id="file">
 
-    <input type="submit" value="Get File Size" id="submit">
+    <input type="submit" value="Get File Size" id="submit" disabled="disabled">
 
     <pre id="filesize"></pre>
 
